--- a/package.json
+++ b/package.json
@@ -26,14 +26,17 @@
     "build": "tsc -p tsconfig.build.json",
     "build:doc": "typedoc",
     "clean": "rimraf lib coverage",
-    "coverage": "jest --coverage",
+    "coverage": "run-p coverage:node test:jsdom",
+    "coverage:node": "jest --coverage",
     "depcheck": "depcheck",
     "lint": "eslint --ext=ts,js .",
     "nuke": "yarn clean && rimraf node_modules",
     "prepare": "husky install",
     "release": "npx semantic-release",
     "size-limit": "size-limit",
-    "test": "jest",
+    "test": "run-p test:node test:jsdom",
+    "test:node": "jest",
+    "test:jsdom": "jest -c jest.config.jsdom.js",
     "test:types": "tsc",
     "verify": "run-p verify:build lint test:types coverage",
     "verify:build": "npm-run-all clean build -p depcheck size-limit",
@@ -42,18 +45,20 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.17.9",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
-    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@size-limit/preset-small-lib": "^7.0.8",
+    "@types/fbemitter": "^2.0.32",
     "@types/jest": "^27.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
     "depcheck": "^1.4.3",
     "eslint": "^8.14.0",
     "eslint-plugin-harmony": "^6.0.2",
+    "eventemitter2": "^6.4.5",
+    "eventemitter3": "^4.0.7",
+    "fbemitter": "^3.0.0",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "jest-progress-tracker": "^3.0.4",
@@ -64,8 +69,8 @@
     "jest-watch-typeahead": "^1.0.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "satisfier": "^5.1.2",
     "size-limit": "^7.0.8",
+    "standard-log": "^7.1.0",
     "typedoc": "^0.22.15",
     "typedoc-plugin-extras": "^2.2.3",
     "typescript": "^4.6.3"
