--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
-    "lib",
-    "ts"
+    "lib"
   ],
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
