chore: release as 1.0.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@unional/events-plus",
-  "version": "0.0.0-development",
+  "version": "1.0.0",
   "description": "Provides additional features to event emitters",
   "homepage": "https://github.com/unional/events-plus",
   "bugs": {
