--- a/package.json
+++ b/package.json
@@ -25,17 +25,18 @@
     "build": "tsc -p tsconfig.build.json",
     "build:doc": "typedoc",
     "clean": "rimraf lib coverage",
-    "coverage": "run-p coverage:node test:jsdom",
-    "coverage:node": "jest --coverage",
+    "coverage": "jest --coverage",
+    "coverage:node": "yarn test:node --coverage",
+    "coverage:jsdom": "yarn test:jsdom --coverage",
     "depcheck": "depcheck",
     "lint": "eslint --ext=ts,js .",
     "nuke": "yarn clean && rimraf node_modules",
     "prepare": "husky install",
     "release": "npx semantic-release",
     "size-limit": "size-limit",
-    "test": "run-p test:node test:jsdom",
-    "test:node": "jest",
-    "test:jsdom": "jest -c jest.config.jsdom.js",
+    "test": "jest",
+    "test:node": "jest -c ./jest.config.node.js",
+    "test:jsdom": "jest -c ./jest.config.jsdom.js",
     "test:types": "tsc",
     "verify": "run-p verify:build lint test:types coverage",
     "verify:build": "npm-run-all clean build -p depcheck size-limit",
@@ -60,9 +61,7 @@
     "fbemitter": "^3.0.0",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
-    "jest-progress-tracker": "^3.0.4",
     "jest-validate": "^27.5.1",
-    "jest-watch-repeat": "^2.0.0",
     "jest-watch-suspend": "^1.1.2",
     "jest-watch-toggle-config": "^2.0.1",
     "jest-watch-typeahead": "^1.0.0",
