--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
   "extends": "plugin:harmony/latest",
   "overrides": [
     {
-      "extends": "plugin:harmony/ts-recommended",
+      "extends": "plugin:harmony/ts-recommended-type-check",
       "files": [
         "*.ts",
         "*.tsx"
