--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "verify:build": "npm-run-all clean build -p depcheck size-limit",
     "watch": "jest --watch"
   },
-  "dependencies": {},
+  "dependencies": {
+    "flux-standard-action": "^2.1.2"
+  },
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
@@ -69,6 +71,7 @@
     "rimraf": "^3.0.2",
     "size-limit": "^7.0.8",
     "standard-log": "^7.1.0",
+    "type-plus": "^4.9.0",
     "typedoc": "^0.22.15",
     "typedoc-plugin-extras": "^2.2.3",
     "typescript": "^4.6.3"
