--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
   "cSpell.words": [
     "FBEE",
     "fbemitter",
-    "pnpm"
+    "pnpm",
+    "Snyk"
   ],
   "eslint.enable": true,
   "files.watcherExclude": {
