--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
     "node": true
   },
   "extends": "plugin:harmony/latest",
+  "plugins": ["@typescript-eslint"],
   "overrides": [
     {
       "extends": "plugin:harmony/ts-recommended-type-check",
