--- a/package.json
+++ b/package.json
@@ -55,9 +55,10 @@
     "@types/fbemitter": "^2.0.32",
     "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.23.0",
     "depcheck": "^1.4.3",
     "eslint": "^8.14.0",
-    "eslint-plugin-harmony": "^6.1.0",
+    "eslint-plugin-harmony": "^7.0.0",
     "eventemitter2": "^6.4.5",
     "eventemitter3": "^4.0.7",
     "fbemitter": "^3.0.0",
