--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "standard-log": "^7.1.0",
     "typedoc": "^0.22.15",
     "typedoc-plugin-extras": "^2.2.3",
-    "typescript": "^4.7.0-beta"
+    "typescript": "^4.7.1-rc"
   },
   "size-limit": [
     {
