--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,8 @@
 {
-  "extends": "./tsconfig.build.json",
+  "extends": "./tsconfig.esm.json",
   "compilerOptions": {
     "noEmit": true
   },
-  "include": [
-    "ts",
-    "typings"
-  ],
   "typedocOptions": {
     "customTitle": "Provides additional features to event emitters",
     "customTitleLink": "https://github.com/unional/events-plus",
