--- a/package.json
+++ b/package.json
@@ -16,27 +16,41 @@
     "email": "homawong@gmail.com"
   },
   "sideEffects": false,
-  "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
+  "type": "module",
+  "exports": {
+    "import": "./esm/index.js",
+    "require": "./cjs/index.js"
+  },
+  "main": "./cjs/index.js",
+  "types": "./cjs/index.d.ts",
   "files": [
-    "lib"
+    "cjs",
+    "esm",
+    "ts",
+    "!*/trapErrorTest.*",
+    "!**/*.spec.*",
+    "!**/*.spec16.*"
   ],
   "scripts": {
-    "build": "tsc -p tsconfig.build.json",
+    "build": "run-s build:cjs build:esm build:tslib",
+    "build:cjs": "tsc -p tsconfig.cjs.json",
+    "build:esm": "tsc -p tsconfig.esm.json",
+    "build:tslib": "tsc -p tsconfig.tslib.json",
     "build:doc": "typedoc",
-    "clean": "rimraf lib coverage",
+    "clean": "rimraf cjs coverage esm lib && mkdir cjs && echo '{\"type\":\"commonjs\"}' > ./cjs/package.json || true",
     "coverage": "jest --coverage",
     "coverage:node": "yarn test:node --coverage",
     "coverage:jsdom": "yarn test:jsdom --coverage",
     "depcheck": "depcheck",
     "lint": "eslint --ext=ts,js .",
-    "nuke": "yarn clean && rimraf node_modules",
-    "prepare": "husky install",
-    "release": "npx semantic-release",
+    "nuke": "yarn clean && rimraf node_modules || true",
+    "postinstall": "husky install",
+    "prepack": "pinst --disable",
+    "postpack": "pinst --enable",
     "size": "size-limit",
     "test": "jest",
-    "test:node": "jest -c ./jest.config.node.js",
-    "test:jsdom": "jest -c ./jest.config.jsdom.js",
+    "test:node": "jest -c ./jest.config.node.cjs",
+    "test:jsdom": "jest -c ./jest.config.jsdom.cjs",
     "test:types": "tsc",
     "verify": "npm-run-all clean -p build lint depcheck coverage -p size",
     "watch": "jest --watch"
@@ -45,9 +59,6 @@
     "@just-func/types": "^0.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-typescript": "^7.16.7",
     "@commitlint/cli": "^17.0.2",
     "@commitlint/config-conventional": "^17.0.2",
     "@size-limit/preset-small-lib": "^7.0.8",
@@ -68,17 +79,29 @@
     "jest-watch-toggle-config": "^2.0.1",
     "jest-watch-typeahead": "^1.1.0",
     "npm-run-all": "^4.1.5",
+    "pinst": "^3.0.0",
     "rimraf": "^3.0.2",
     "size-limit": "^7.0.8",
-    "standard-log": "^9.1.5",
+    "standard-log": "^9.1.6",
+    "ts-jest": "^28.0.5",
+    "tslib": "^2.4.0",
     "typedoc": "^0.22.17",
     "typedoc-plugin-extras": "^2.2.3",
     "typescript": "^4.7.3"
   },
+  "packageManager": "yarn@3.2.1",
   "size-limit": [
     {
+      "path": "./cjs/index.js",
+      "limit": "10 kb"
+    },
+    {
+      "path": "./esm/index.js",
+      "limit": "10 kb"
+    },
+    {
+      "path": "./tslib/index.js",
       "limit": "10 kb"
     }
-  ],
-  "packageManager": "yarn@3.2.1"
+  ]
 }
