--- a/.depcheckrc.yml
+++ b/.depcheckrc.yml
@@ -1,5 +1,6 @@
 ignores:
   - "@commitlint/*"
+  - "@semantic-release/*"
   - "@size-limit/*"
   - "@types/jest"
   - jest-environment-jsdom
@@ -7,6 +8,7 @@ ignores:
   - jest-watch-suspend
   - jest-watch-toggle-config
   - jest-watch-typeahead
+  - semantic-release
   - ts-jest
   - tslib
   - typedoc*
