--- a/package.json
+++ b/package.json
@@ -61,6 +61,10 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.2",
     "@commitlint/config-conventional": "^17.0.2",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.4",
+    "@semantic-release/npm": "^9.0.1",
     "@size-limit/preset-small-lib": "^7.0.8",
     "@types/fbemitter": "^2.0.32",
     "@types/jest": "^28.1.1",
@@ -81,6 +85,7 @@
     "npm-run-all": "^4.1.5",
     "pinst": "^3.0.0",
     "rimraf": "^3.0.2",
+    "semantic-release": "^19.0.3",
     "size-limit": "^7.0.8",
     "standard-log": "^9.1.6",
     "ts-jest": "^28.0.5",
