--- a/package.json
+++ b/package.json
@@ -33,18 +33,18 @@
   ],
   "scripts": {
     "build": "run-s build:cjs build:esm build:tslib",
-    "build:cjs": "tsc -p tsconfig.cjs.json",
+    "build:cjs": "tsc -p tsconfig.cjs.json && ncp package.cjs.json cjs/package.json",
     "build:esm": "tsc -p tsconfig.esm.json",
     "build:tslib": "tsc -p tsconfig.tslib.json",
     "build:doc": "typedoc",
-    "clean": "rimraf cjs coverage esm lib && mkdir cjs && echo '{\"type\":\"commonjs\"}' > ./cjs/package.json || true",
+    "clean": "rimraf cjs coverage esm lib tslib",
     "coverage": "jest --coverage",
     "coverage:node": "yarn test:node --coverage",
     "coverage:jsdom": "yarn test:jsdom --coverage",
     "depcheck": "depcheck",
     "lint": "eslint --ext=ts,js .",
-    "nuke": "yarn clean && rimraf node_modules || true",
-    "postinstall": "husky install",
+    "nuke": "yarn clean && rimraf node_modules",
+    "prepare": "husky install",
     "prepack": "pinst --disable",
     "postpack": "pinst --enable",
     "size": "size-limit",
@@ -52,7 +52,7 @@
     "test:node": "jest -c ./jest.config.node.cjs",
     "test:jsdom": "jest -c ./jest.config.jsdom.cjs",
     "test:types": "tsc",
-    "verify": "npm-run-all clean -p build lint depcheck coverage -p size",
+    "verify": "npm-run-all build lint depcheck coverage -p size",
     "watch": "jest --watch"
   },
   "dependencies": {
@@ -82,6 +82,7 @@
     "jest-watch-suspend": "^1.1.2",
     "jest-watch-toggle-config": "^2.0.1",
     "jest-watch-typeahead": "^2.0.0",
+    "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "pinst": "^3.0.0",
     "rimraf": "^3.0.2",
