fix: update deps
BREAKING CHANGE: CJS transpile to ES2015 instead of ES5

use @repobuddy/jest

--- a/.depcheckrc.yml
+++ b/.depcheckrc.yml
@@ -1,13 +1,10 @@
 ignores:
   - "@commitlint/*"
+  - "@repobuddy/jest"
   - "@semantic-release/*"
   - "@size-limit/*"
   - "@types/jest"
-  - jest-environment-jsdom
-  - jest-validate
-  - jest-watch-suspend
-  - jest-watch-toggle-config
-  - jest-watch-typeahead
+  - jest-*
   - semantic-release
   - ts-jest
   - tslib
