--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "build": "run-s build:cjs build:esm build:tslib",
     "build:cjs": "tsc -p tsconfig.cjs.json && ncp package.cjs.json cjs/package.json",
     "build:esm": "tsc -p tsconfig.esm.json",
-    "build:tslib": "tsc -p tsconfig.tslib.json",
+    "build:tslib": "tsc -p tsconfig.tslib.json && ncp package.cjs.json tslib/package.json",
     "build:doc": "typedoc",
     "clean": "rimraf cjs coverage esm lib tslib",
     "coverage": "jest --coverage",
@@ -52,6 +52,7 @@
     "test:node": "jest -c ./jest.config.node.cjs",
     "test:jsdom": "jest -c ./jest.config.jsdom.cjs",
     "test:types": "tsc",
+    "test:watch": "jest --watch",
     "verify": "npm-run-all build lint depcheck coverage -p size",
     "watch": "jest --watch"
   },
@@ -59,41 +60,41 @@
     "@just-func/types": "^0.5.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.0.2",
-    "@commitlint/config-conventional": "^17.0.2",
-    "@semantic-release/changelog": "^6.0.1",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
+    "@repobuddy/jest": "^2.2.1",
+    "@semantic-release/changelog": "^6.0.2",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^8.0.4",
+    "@semantic-release/github": "^8.0.7",
     "@semantic-release/npm": "^9.0.1",
-    "@size-limit/preset-small-lib": "^8.0.0",
+    "@size-limit/preset-small-lib": "^8.1.0",
     "@types/fbemitter": "^2.0.32",
-    "@types/jest": "^28.1.1",
+    "@types/jest": "^28.1.8",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "depcheck": "^1.4.3",
-    "eslint": "^8.17.0",
-    "eslint-plugin-harmony": "^7.1.0",
-    "eventemitter2": "^6.4.5",
+    "eslint": "^8.29.0",
+    "eslint-plugin-harmony": "^7.1.1",
+    "eventemitter2": "^6.4.9",
     "eventemitter3": "^5.0.0",
     "fbemitter": "^3.0.0",
     "husky": "^8.0.1",
-    "jest": "^29.0.0",
-    "jest-environment-jsdom": "^29.0.0",
-    "jest-validate": "^29.0.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "jest-watch-suspend": "^1.1.2",
-    "jest-watch-toggle-config": "^2.0.1",
-    "jest-watch-typeahead": "^2.0.0",
+    "jest-watch-toggle-config-2": "^2.1.0",
+    "jest-watch-typeahead": "^2.2.1",
     "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "pinst": "^3.0.0",
     "rimraf": "^3.0.2",
-    "semantic-release": "^19.0.3",
-    "size-limit": "^8.0.0",
-    "standard-log": "^11.0.0",
-    "ts-jest": "^28.0.5",
-    "tslib": "^2.4.0",
-    "typedoc": "^0.23.0",
-    "typedoc-plugin-extras": "^2.2.3",
-    "typescript": "^4.7.3"
+    "semantic-release": "^19.0.5",
+    "size-limit": "^8.1.0",
+    "standard-log": "^11.5.0",
+    "ts-jest": "^28.0.8",
+    "tslib": "^2.4.1",
+    "typedoc": "^0.23.21",
+    "typedoc-plugin-extras": "^2.3.1",
+    "typescript": "^4.9.4"
   },
   "packageManager": "yarn@3.3.0",
   "size-limit": [
